python/testData/inspections/unusedImport/unresolvedModule/test.py
import <error descr="No module named 'unresolved1'">unresolved1</error>
import <error descr="No module named 'unresolved2'">unresolved2</error>
import <error descr="No module named 'unresolved3'">unresolved3</error>
<warning descr="Unused import statement 'import os'">import os</warning>